@@ -477,7 +477,7 @@ let verify_packet st pkt =
 
 let resolve st ?(sig0=None) q typ name =
 (*  lwt p = Dns_resolver.resolve st.resolver ~dnssec:true q typ name in *)
-  let id = Dns_resolver.get_id () in
+  let id = Dns_resolver.DNSProtocol.get_id () in
   let pkt = Dns.Query.create ~id ~dnssec:true q typ name in
   let pkt =
     match sig0 with
